[gd_scene load_steps=6 format=3 uid="uid://c7845x7xoc1g2"]

[ext_resource type="Script" path="res://Menus/MainMenu/main_menu.gd" id="1_q4nro"]
[ext_resource type="PackedScene" uid="uid://b2myeafehcosh" path="res://Common/AudioManagers/music_manager.tscn" id="2_8fsjn"]

[sub_resource type="Gradient" id="Gradient_dpln6"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.0646965, 0.0646965, 0.0646965, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5e85f"]
gradient = SubResource("Gradient_dpln6")
width = 1920
height = 1080

[sub_resource type="LabelSettings" id="LabelSettings_s1si1"]
font_size = 80

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_q4nro")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_5e85f")
centered = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 200.0
offset_right = 960.0
offset_bottom = 200.0

[node name="TitleLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -56.0
offset_right = 84.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
text = "Title"
label_settings = SubResource("LabelSettings_s1si1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = 367.0
offset_right = 23.0
offset_bottom = 398.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="ExitButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.5
offset_top = 423.0
offset_right = 18.5
offset_bottom = 454.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"

[node name="MusicManager" parent="." instance=ExtResource("2_8fsjn")]

[connection signal="pressed" from="Control/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Control/ExitButton" to="." method="_on_exit_button_pressed"]
